ajax func in progress, addd csrf function

--- a/budget/templates/budget/view_day.html
+++ b/budget/templates/budget/view_day.html
@@ -3,12 +3,22 @@
 {% load static %}
 
 {% block js %}
+<script type="text/javascript" src="{% static 'budget/js/ajax_fun.js' %}"></script>
 <script type="text/javascript" src="{% static 'budget/js/helper.js' %}"></script>
 <script type="text/javascript" src="{% static 'budget/js/menu_screen.js' %}"></script>
 <script type="text/javascript" src="{% static 'budget/js/view_day.js' %}"></script>
+
 {% endblock %}
 
 {% block content %}
+
+{% csrf_token %}
+<script type="text/javascript">
+    var add_url = "{% url 'budget:add' %}";
+    var csrftoken = jQuery("[name=csrfmiddlewaretoken]").val();
+    console.log({{ type }})
+</script>
+
 <link rel="stylesheet" type="text/css" href="{% static 'budget/css/view_day.css' %}" />
 
 <div class="container">
